# glucowallet

./: .gitignore  .pre-commit-config.yaml  README.md  env  glucowallet-config.ini.example  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  test_requirements.txt
.github/workflows/: pylint.yml
glucowallet/: config.py  glucose_data.csv  influx_storage.py  libreview_client.py  main.py
glucowallet/takeaway/: exporter.py
